# EffectiveCpp

./: CMakeLists.txt  EffectiveC.qbs  README.md  alias_declaration.h  async.h  brace_initialazers.h  condition_variable.h  const_iterator.h  constexpr.h  delete.h  main.cpp  null_ptr.h  perfect_forwarding.h  pimpl.h  promise.h  shared_ptr.h  type_deduction.h  type_info_before.h  unique_ptr.h
c++11/: CMakeLists.txt
c++11/include/: alias_declaration.h  async.h  auto.h  brace_initialazers.h  condition_variable.h  condition_variable_notify_issue.h  constexpr.h  enums.h  perfect_forwarding.h  type_info_before.h  type_traits.h
c++11/src/: main.cpp  pimpl.cpp
c++14/: CMakeLists.txt
c++14/include/: binary_literals.h  decltype_auto.h  generalized_lambda_capture.h  literals.h  std_lib.h  variable_template.h
c++14/src/: main.cpp
c++17/: CMakeLists.txt
c++17/include/: class_template_detuction.h  fold.h
c++17/src/: main.cpp
c++20/: CMakeLists.txt
c++20/include/: coroutines.hpp  designated.hpp  jthread.hpp  ranges.hpp
c++20/src/: main.cpp
c++23/: CMakeLists.txt
c++23/include/: constexpr_allocations.hpp  expected.hpp
c++23/src/: main.cpp
c++basics/: CMakeLists.txt
c++basics/include/: custom_copy.hpp
c++basics/src/: main.cpp
